# cu-smallpt

cu-smallpt/cu-smallpt/src/: CMakeLists.txt  imageio.hpp  kernel.cu
